--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.39.5",
+    "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.3",
     "uuid": "^9.0.0"
   },
