--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-hook-form": "^7.39.5",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.4.4",
+    "sweetalert2": "^11.6.15",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
