--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.39.5",
     "react-icons": "^4.7.1",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.4",
+    "redux": "^4.2.0",
     "sweetalert2": "^11.6.15",
     "uuid": "^9.0.0"
   },
